syntax = "proto3";

option csharp_namespace = "OwnershipServiceGrpc.Protos";

import "Protos/SharedGrpc.proto";
package OwnershipServiceGrpc;

service IOwnershipService
{
    rpc GetSharesInStock (SharesInStockRequest) returns (SharesInStockResponse);
    rpc RegisterUser (SharedGrpc.UserRegistrationRequest) returns (SharedGrpc.Empty);
    rpc ChangeOwnership (ChangeOwnershipRequest) returns (SharedGrpc.Empty);
}

message SharesInStockRequest {
    int32 UserId = 1;
    int32 StockId = 2;
}

message SharesInStockResponse {
    repeated SharedGrpc.Share Shares = 1;
}

message ShareHolder {
    int32 UserId = 1;
    repeated SharedGrpc.Share Shares = 2;
}

message Voucher {
    int32 UserId = 1;
    float Amount = 2;
}

message ChangeOwnershipRequest {
    int32 NewUserId = 1;
    int32 OldUserId = 2;
    int32 StockId = 3;
    int32 Amount = 4;
}

message ChangeOwnershipResponse {
    repeated Voucher vouchers = 1;
}