syntax = "proto3";

option csharp_namespace = "TransactionService.Protos";

import "Protos/SharedGrpc.proto";
package TransactionServiceGrpc;

service ITransactionService
{
    rpc PerformTransaction (TransactionRequest) returns (TransactionReceipt);
}

message TransactionRequest {
    int32 StockId = 1;
    int32 ShareAmount = 2;
    float SharePrice = 3;
    int32 SellerUserId = 4;
    int32 BuyerUserId = 5;
}

message TransactionReceipt {
    float TotalPrice = 1;
    float TaxPaid = 2;
}